feat(#101) Add translation to survey, fire safety, particular risks

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
   "addGeometricShape":"Add a shape",
   "addThemeButton":"Add a new theme...",
   "affectation":"Assignment",
+  "Abnromalities":"Abnromalities",
   "approximate":"Approximate",
   "backToBuildingList":"Return to building list",
   "bringToFront":"Bring to front",
