feat(#101) Add translation in building abnormalities

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,17 +1,24 @@
 {
+  "abnormalities":"Abnormalities",
+  "abnormalityDelete":"Delete abnormality",
+  "abnormalityDeleteQuestion":"Do you really want to delete this abnormality ?",
+  "abnormalityDetail":"Abnormality details",
+  "abnormalityLeaveMessage":"The abnormality contains some validation errors and have not been saved. Do you still want to go to the building abnormalities list ?",
   "absence":"Absence",
   "add":"Add",
+  "addAbnormalityButton":"Add an abnormality...",
   "addContactButton":"Add a contact...",
   "addFirePanelAlarmButton":"Add a alarm panel...",
   "addFireSprinklerButton":"Add a fire sprinkler...",
   "addHazardousMaterialButton":"Add hazardous material...",
   "addLaneButton":"Add a lane...",
   "addPnapButton":"Add a PNAP...",
+  "addThemeButton":"Add a new theme...",
   "affectation":"Assignment",
-  "Abnromalities":"Abnromalities",
   "approximate":"Approximate",
   "backToBuildingList":"Return to building list",
   "building":"Building",
+  "buildingAbnormalities":"Building abnormalities",
   "buildingContact": "Building contacts",
   "buildingDetail":"Building details",
   "buildingHazardousMaterial":"Building hazardous material",
@@ -107,6 +114,7 @@
   "laneRequired":"*The lane is required.",
   "lastName":"Last name",
   "lastNameRequired":"*Last name is required.",
+  "loading":"Loading...",
   "Localization":"Localization",
   "login":"LOG IN",
   "logout":"LOG OUT",
@@ -116,6 +124,7 @@
   "measuringUnitRequired":"*The measuring unit is required.",
   "new":"New...",
   "no":"No",
+  "notes":"Notes",
   "number":"Number",
   "opening":"Opening",
   "otherInformation":"Other information",
@@ -168,6 +177,12 @@
   "tankTypeUndetermined":"Undetermined",
   "tankTypeUnderground":"Underground",
   "tankTypeAboveGround":"Aboveground",
+  "theme":"Theme",
+  "themeCreationTitle":"New theme",
+  "themeCreationMessage":"Enter the new theme name",
+  "themeNameHolder":"Name of the theme",
+  "themeSelection":"Theme selection",
+  "themeValidationMessage":"The theme must not be empty.",
   "transversal":"Transversal",
   "type":"Type",
   "typeRequired":"*Type is required.",
