--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,17 +1,24 @@
 {
+  "abnormalities":"Anomalies",
+  "abnormalityDelete":"Supprimer l'anomalie",
+  "abnormalityDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette anomalie ?",
+  "abnormalityDetail":"Détails de l'anomalie",
+  "abnormalityLeaveMessage":"L'anomalie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des anomalies du bâtiment?",
   "absence":"Absence",
   "add":"Ajouter",
+  "addAbnormalityButton":"Ajouter une anomalie...",
   "addContactButton":"Ajouter un contact...",
   "addFirePanelAlarmButton":"Ajouter un panneau d'alarme...",
   "addFireSprinklerButton":"Ajouter un gicleur...",
   "addHazardousMaterialButton":"Ajouter une matière dangereuse...",
   "addLaneButton":"Ajouter une voie...",
   "addPnapButton":"Ajouter un PNAP...",
+  "addThemeButton":"Ajouter un nouveau thème...",
   "affectation":"Affectation",
-  "Abnromalities":"Anomalies",
   "approximate":"Approximatif",
   "backToBuildingList":"Retourner à la liste des batîments",
   "building":"Batîment",
+  "buildingAbnormalities":"Anomalies du btaîment",
   "buildingContact": "Contacts du batîment",
   "buildingDetail":"Détails du batîmnet",
   "buildingHazardousMaterial":"Matières dangereuses du batîmnent",
@@ -107,6 +114,7 @@
   "laneRequired":"*La voie est requise.",
   "lastName":"Nom",
   "lastNameRequired":"Le nom est requis.",
+  "loading":"Chargement...",
   "Localization":"Localisation",
   "login":"CONNEXION",
   "logout":"Quitter",
@@ -116,6 +124,7 @@
   "measuringUnitRequired":"*L'unité de mesure est requise.",
   "new":"Nouvelle...",
   "no":"Non",
+  "notes":"Notes",
   "number":"Numéro",
   "opning":"Ouveture",
   "otherInformation":"Autres informations",
@@ -167,6 +176,12 @@
   "tankTypeUndetermined":"Indéterminé",
   "tankTypeUnderground":"Sous-terre",
   "tankTypeAboveGround":"Hors-terre",
+  "theme":"Thème",
+  "themeCreationTitle":"Nouveau thème",
+  "themeCreationMessage":"Entrez le nom du nouveau thème",
+  "themeNameHolder":"Nom du thème",
+  "themeSelection":"Séléction d'un thème",
+  "themeValidationMessage":"Le thème ne doit pas être vide.",
   "transversal":"Transversale",
   "type":"Type",
   "typeRequired":"*Le type est requis.",
