feat(#101) Add translation terms for inspection

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,11 +56,13 @@
   "courseLaneDetail":"Lane detail",
   "courseLaneValidationMessage":"You must select a fire station before choosing a street.",
   "courseOrderChange":"Change order",
+  "date":"Date",
   "description":"Description",
   "detached":"Detached",
   "dieValidationMessage":"*DIE must be an integer equal or superior to 0.",
   "direction":"Direction",
   "division":"Division",
+  "doorHangerLeft":"Door hanger left",
   "extension":"Extension",
   "finish":"Finish",
   "fireAlarmPanel":"Alarm panel",
@@ -98,6 +100,8 @@
   "homePhone":"Home phone",
   "implantationPlan":"Site plan",
   "inspectionBatch":"Inspection batch",
+  "inspectionByMap":"By map",
+  "inspectionByList":"By list",
   "inspectionList":"Inspection list",
   "inspectionListSearchText":"Risk level, civic # or street name",
   "inspectionQuit":"Quit inspection",
@@ -107,6 +111,7 @@
   "inspectionStatusStarted":"Inspection in progress",
   "inspectionStatusTodo":"Pending inspection",
   "inspectionStatusWaitingForApprobation":"Waiting for inspection approval",
+  "inspectionVisit":"Inspection visit",
   "lane":"Lane",
   "laneDeleteButton":"Delete the lane",
   "laneDeleteQuestion":"Do you really want to delete this lane ?",
@@ -117,6 +122,7 @@
   "loading":"Loading...",
   "Localization":"Localization",
   "login":"LOG IN",
+  "loginError":"Username or password invalid",
   "logout":"LOG OUT",
   "material":"Material",
   "matricule":"Matricule",
@@ -130,6 +136,8 @@
   "otherInformation":"Other information",
   "otherPhone":"Other phone",
   "owner":"Owner",
+  "ownerAbsent":"Owner absent",
+  "ownerRefused":"Owner refused",
   "pager":"Pager",
   "particularRisk":"Particular risks",
   "particularRiskFloor":"Floor",
@@ -161,6 +169,7 @@
   "riskLevel": "Risk level",
   "roof":"Roof",
   "room":"Room",
+  "save":"Save",
   "search":"Search",
   "searchHolder":"Search...",
   "securityPerimeter":"Security perimeter",
@@ -172,7 +181,8 @@
   "surveyCompletedMessage":"The survey is completed, redirect to the survey summary.",
   "surveyNextQuestion":"Previous",
   "surveyPreviousQuestion":"Previous",
-  "surveyRequired":"Please answer the survey to complete inpsection.",
+  "surveyRequired":"Please answer the survey to complete inspection.",
+  "surveyUnassignedMessage":"You are not assigned to any inspection.",
   "tank":"Tank",
   "tankTypeUndetermined":"Undetermined",
   "tankTypeUnderground":"Underground",
@@ -188,7 +198,12 @@
   "typeRequired":"*Type is required.",
   "unit":"Unit",
   "userName":"User name",
+  "visitCanceled": "Visit canceled",
+  "visitCanceledMotive":"Cancelation motive",
+  "visitNewSchedule":"New visit date",
   "visitRefused": "Visit refused",
+  "visitRefusedMotive": "Refusal motive",
+  "visitRefusedValidationMessage":"*Please fill the refusal motive first.",
   "visitStatusCompleted":"Visit completed",
   "visitStatusStarted":"Visit in progress",
   "visitStatusTodo":"Pending visit",
