--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -56,11 +56,13 @@
   "courseLaneDetail":"Détails de la voie",
   "courseLaneValidationMessage":"Vous devez sélectionner une caserne avant de pouvoir ajouter une rue.",
   "courseOrderChange":"Changer l'ordre",
+  "date":"Date",
   "description":"Description",
   "detached":"Détaché",
   "dieValidationMessage":"*Le DIE doit être une valeur entière et valide supérieure ou égale à 0.",
   "direction":"Direction",
   "division":"Section",
+  "doorHangerLeft":"Accroche-porte laissé",
   "extension":"Extension",
   "finish":"Terminer",
   "fireAlarmPanel":"Panneaux d'alarme",
@@ -97,8 +99,10 @@
   "heightValidationMessage":"*La hauteur doit être une valeur décimale de format valide (ex.: 9999.99).",
   "homePhone":"Téléphone domicile",
   "implantationPlan":"Plan d'implantation",
-  "inspectionList":"Liste des inspections",
   "inspectionBatch":"lot d'inspection",
+  "inspectionByMap":"Par carte",
+  "inspectionByList":"Par liste",
+  "inspectionList":"Liste des inspections",
   "inspectionListSearchText":"Niveau de risque, # civique ou nom de rue",
   "inspectionQuit":"Sortir de l'inspection",
   "inspectionStatusApproved":"Inspection approuvée",
@@ -107,6 +111,7 @@
   "inspectionStatusStarted":"Inspection en cours",
   "inspectionStatusTodo":"Inspection en attente",
   "inspectionStatusWaitingForApprobation":"Inspection en attente d'approbation",
+  "inspectionVisit":"Visite d'inspection",
   "lane":"Voie",
   "laneDeleteButton":"Supprimer la voie",
   "laneDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette voie ?",
@@ -117,6 +122,7 @@
   "loading":"Chargement...",
   "Localization":"Localisation",
   "login":"CONNEXION",
+  "loginError":"Nom d'usager ou mot de passe incorrect.",
   "logout":"Quitter",
   "material":"Matériel",
   "matricule":"Matricule",
@@ -126,10 +132,12 @@
   "no":"Non",
   "notes":"Notes",
   "number":"Numéro",
-  "opning":"Ouveture",
+  "opening":"Ouveture",
   "otherInformation":"Autres informations",
   "otherPhone":"Autre téléphone",
   "owner":"Propriétaire",
+  "ownerAbsent":"Propriétaire absent",
+  "ownerRefused":"Refus du propriétaire",
   "pager":"Téléavertisseur",
   "particularRisk":"Risques particuliers",
   "particularRiskFloor":"Plancher",
@@ -161,6 +169,7 @@
   "riskLevel": "Niveau de risque",
   "roof":"Toit",
   "room":"Local",
+  "save":"Enregistrer",
   "search":"Recherche",
   "searchHolder":"Recherche...",
   "securityPerimeter":"Périmètre de sécurité",
@@ -171,7 +180,8 @@
   "survey":"Questionnaire",
   "surveyCompletedMessage":"Le questionnaire est complété, redirection vers le résumé du questionnaire.",
   "surveyPreviousQuestion":"Précédente",
-  "surveyRequired":"Please answer the survey to complete inpsection.",
+  "surveyRequired":"Veuillez remplir le questionnaire pour compléter l'inpection.",
+  "surveyUnassignedMessage":"Vous n'êtes assigné à aucune inspection.",
   "tank":"Réservoir",
   "tankTypeUndetermined":"Indéterminé",
   "tankTypeUnderground":"Sous-terre",
@@ -187,7 +197,12 @@
   "typeRequired":"*Le type est requis.",
   "unit":"Unité",
   "userName":"Nom d'usager",
+  "visitCanceled": "Visite annulée",
+  "visitCanceledMotive":"Motif d'annulation",
+  "visitNewSchedule":"Nouvelle date de visite",
   "visitRefused": "Refus de visite",
+  "visitRefusedMotive": "Motif du refus",
+  "visitRefusedValidationMessage":"*Veuillez préalablement entrer la raison du refus de la visite d'inspection.",
   "visitStatusTodo":"Visite en attente",
   "visitStatusStarted":"Visite en cours",
   "visitStatusCompleted":"Visit completée",
