feat(#101) Hot fix from code review

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,12 @@
 {
-  "abnormalities":"Abnormalities",
-  "abnormalityDelete":"Delete abnormality",
-  "abnormalityDeleteQuestion":"Do you really want to delete this abnormality ?",
-  "abnormalityDetail":"Abnormality details",
-  "abnormalityLeaveMessage":"The abnormality contains some validation errors and have not been saved. Do you still want to go to the building abnormalities list ?",
+  "anomalities":"Anomalities",
+  "anomalityDelete":"Delete anomality",
+  "anomalityDeleteQuestion":"Do you really want to delete this anomality ?",
+  "anomalityDetail":"Anomality details",
+  "anomalityLeaveMessage":"The anomality contains some validation errors and has not been saved. Do you still want to go to the building's anomalities list?",
   "absence":"Absence",
   "add":"Add",
-  "addAbnormalityButton":"Add an abnormality...",
+  "addAnomalityButton":"Add an anomality...",
   "addContactButton":"Add a contact...",
   "addFirePanelAlarmButton":"Add a alarm panel...",
   "addFireSprinklerButton":"Add a fire sprinkler...",
@@ -18,13 +18,13 @@
   "approximate":"Approximate",
   "backToBuildingList":"Return to building list",
   "building":"Building",
-  "buildingAbnormalities":"Building abnormalities",
-  "buildingContact": "Building contacts",
-  "buildingDetail":"Building details",
-  "buildingHazardousMaterial":"Building hazardous material",
-  "buildingLeaveMessage":"The building details contains some validation errors and have not been saved. Do you still want to go to previous page ?",
+  "buildingAnomalities":"Building's anomalities",
+  "buildingContact": "Building's contacts",
+  "buildingDetail":"Building's details",
+  "buildingHazardousMaterial":"Building's hazardous material",
+  "buildingLeaveMessage":"The building details contains some validation errors and has not been saved. Do you still want to go to previous page?",
   "buildingList":"Building list",
-  "buildingPnaps":"Building PNAPS",
+  "buildingPnaps":"Building's PNAPS",
   "buildings":"Buildings",
   "cancel":"Cancel",
   "capacity":"Capacity",
@@ -43,18 +43,18 @@
   "contactDeleteButton": "Delete this contact",
   "contactDeleteQuestion":"Do you really want to delete this contact ?",
   "contactDetail":"Contact details",
-  "contactLeaveMessage":"The contact contains some validation errors and have not been saved. Do you still want to go to the building contact list ?",
+  "contactLeaveMessage":"The contact contains some validation errors and has not been saved. Do you still want to go to the building contact list?",
   "container":"Container",
   "containerCapacity":"Container capacity",
   "containerCapacityValidationMessage":"*Capacity must be a valid decimal.",
-  "containerUnitRequired":"*Measuring unit is required when capacity is superior than 0.",
+  "containerUnitRequired":"*The measuring unit is required when capacity is superior than 0.",
   "course":"Course",
   "courseDetail":"Course detail",
   "courseDetailDeleteButton":"Delete the course",
   "courseDetailDeleteQuestion":"Do you really want to delete this course ?",
-  "courseDetailLeaveMessage":"this course contains some validation errors and have not been saved. Do you still want to to previous page ?",
+  "courseDetailLeaveMessage":"This course contains some validation errors and has not been saved. Do you still want to to previous page?",
   "courseLaneDetail":"Lane detail",
-  "courseLaneValidationMessage":"You must select a fire station before choosing a street.",
+  "courseLaneValidationMessage":"You must select a fire station before choosing a lane.",
   "courseOrderChange":"Change order",
   "date":"Date",
   "description":"Description",
@@ -67,9 +67,9 @@
   "finish":"Finish",
   "fireAlarmPanel":"Alarm panel",
   "fireAlarmPanelDelete":"Delete this alarm panel",
-  "fireAlarmPanelDeleteQuestion":"Do you really want to delete this alarm panel ?",
+  "fireAlarmPanelDeleteQuestion":"Do you really want to delete this alarm panel?",
   "fireAlarmPanelDetail":"Alarm panel details",
-  "fireAlarmPanelLeaveMessage":"The alarm panel contains some validation errors and have not been saved. Do you still want to go to the building fire safety list ?",
+  "fireAlarmPanelLeaveMessage":"The alarm panel contains some validation errors and has not been saved. Do you still want to go to the building fire safety list?",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you really want to delete this fire hydrant ?",
   "fireHydrantList":"Fire hydrant list",
@@ -80,9 +80,9 @@
   "fireSprinklerDelete":"Delete fire sprinkler",
   "fireSprinklerDeleteQuestion":"Do you really want to delete this sprinkler ?",
   "fireSrinklerDetail":"Fire sprinkler details",
-  "fireSprinklerLeaveMessage":"The sprinkler contains some validation errors and have not been saved. Do you still want to go to the building fire safety list ?",
+  "fireSprinklerLeaveMessage":"The sprinkler contains some validation errors and has not been saved. Do you still want to go to the building fire safety list?",
   "fireStation":"Fire station",
-  "fireStationRequired":"Fire station is mandatory",
+  "fireStationRequired":"*Fire station is required.",
   "firstName":"First name",
   "firstNameRequired":"*First name is required.",
   "floor":"Floor",
@@ -94,7 +94,7 @@
   "hazardousMaterialDelete":"Delete this hazardous material...",
   "hazardousMaterialDeleteQuestion":"Do you really want to delete this material ?",
   "hazardousMaterialDetail":"Hazardous material details",
-  "hazardousMaterialLeaveMessage":"The hazardous material contains some validation errors and have not been saved. Do you still want to go to the building hazardous material list ?",
+  "hazardousMaterialLeaveMessage":"The hazardous material contains some validation errors and has not been saved. Do you still want to go to the building hazardous material list?",
   "height":"Height",
   "heightValidationMessage":"*Height must be a valid decimal (ex.:999.99)",
   "homePhone":"Home phone",
@@ -103,9 +103,9 @@
   "inspectionByMap":"By map",
   "inspectionByList":"By list",
   "inspectionList":"Inspection list",
-  "inspectionListSearchText":"Risk level, civic # or street name",
+  "inspectionListSearchText":"Risk level, civic # or lane name",
   "inspectionQuit":"Quit inspection",
-  "inspectionStatusApproved":"Inspection approuved",
+  "inspectionStatusApproved":"Inspection approved",
   "inspectionStatusCanceled":"Inspection canceled",
   "inspectionStatusRefused":"Inspection refused",
   "inspectionStatusStarted":"Inspection in progress",
@@ -115,10 +115,10 @@
   "lane":"Lane",
   "laneDeleteButton":"Delete the lane",
   "laneDeleteQuestion":"Do you really want to delete this lane ?",
-  "laneLeaveMessage":"This lane contains some validation errors and have not been saved. Do you still want to go to the previous page ?",
+  "laneLeaveMessage":"This lane contains some validation errors and has not been saved. Do you still want to go to the previous page ?",
   "laneRequired":"*The lane is required.",
   "lastName":"Last name",
-  "lastNameRequired":"*Last name is required.",
+  "lastNameRequired":"*The last name is required.",
   "loading":"Loading...",
   "Localization":"Localization",
   "login":"LOG IN",
@@ -153,7 +153,7 @@
   "pnapDetailContactNameHolder":"Name of the contact",
   "pnapDetailNameHolder":"Name of the person",
   "pnapEveningResident":"Evening resident",
-  "pnapLeaveMessage":"The PNAP contains some validation errors and have not been saved. Do you still want to go to the building PNAP list ?",
+  "pnapLeaveMessage":"The PNAP contains some validation errors and has not been saved. Do you still want to go to the building PNAP list ?",
   "pnapNightResident":"Night resident",
   "pnapNumber":"Number",
   "pnapNumberValidationMessage":"*The number must be a valid integer.",
@@ -161,7 +161,7 @@
   "priority":"Priority",
   "priorityValidationMessage":"*You must enter a valid number.",
   "product":"Product",
-  "productRequired":"*Product is required.",
+  "productRequired":"*The product is required.",
   "quantity":"Quantity",
   "quantityValidationMessage":"*The quantity must be a valid integer.",
   "reason":"Reason",
@@ -178,7 +178,7 @@
   "street":"Street",
   "supply":"Supply",
   "survey":"Survey",
-  "surveyCompletedMessage":"The survey is completed, redirect to the survey summary.",
+  "surveyCompletedMessage":"The survey is completed, redirecting to the survey summary.",
   "surveyNextQuestion":"Previous",
   "surveyPreviousQuestion":"Previous",
   "surveyRequired":"Please answer the survey to complete inspection.",
@@ -187,16 +187,16 @@
   "tank":"Tank",
   "tankTypeUndetermined":"Undetermined",
   "tankTypeUnderground":"Underground",
-  "tankTypeAboveGround":"Aboveground",
+  "tankTypeAboveground":"Aboveground",
   "theme":"Theme",
   "themeCreationTitle":"New theme",
   "themeCreationMessage":"Enter the new theme name",
   "themeNameHolder":"Name of the theme",
   "themeSelection":"Theme selection",
-  "themeValidationMessage":"The theme must not be empty.",
+  "themeValidationMessage":"*The theme must not be empty.",
   "transversal":"Transversal",
   "type":"Type",
-  "typeRequired":"*Type is required.",
+  "typeRequired":"*The type is required.",
   "unit":"Unit",
   "userName":"User name",
   "visitCanceled": "Visit canceled",
