--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,12 +1,12 @@
 {
-  "abnormalities":"Anomalies",
-  "abnormalityDelete":"Supprimer l'anomalie",
-  "abnormalityDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette anomalie ?",
-  "abnormalityDetail":"Détails de l'anomalie",
-  "abnormalityLeaveMessage":"L'anomalie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des anomalies du bâtiment?",
+  "anomalities":"Anomalies",
+  "anomalityDelete":"Supprimer l'anomalie",
+  "anomalityDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette anomalie ?",
+  "anomalityDetail":"Détails de l'anomalie",
+  "anomalityLeaveMessage":"L'anomalie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des anomalies du bâtiment?",
   "absence":"Absence",
   "add":"Ajouter",
-  "addAbnormalityButton":"Ajouter une anomalie...",
+  "addAnomalityButton":"Ajouter une anomalie...",
   "addContactButton":"Ajouter un contact...",
   "addFirePanelAlarmButton":"Ajouter un panneau d'alarme...",
   "addFireSprinklerButton":"Ajouter un gicleur...",
@@ -18,7 +18,7 @@
   "approximate":"Approximatif",
   "backToBuildingList":"Retourner à la liste des batîments",
   "building":"Batîment",
-  "buildingAbnormalities":"Anomalies du btaîment",
+  "buildingAnomalities":"Anomalies du btaîment",
   "buildingContact": "Contacts du batîment",
   "buildingDetail":"Détails du batîmnet",
   "buildingHazardousMaterial":"Matières dangereuses du batîmnent",
@@ -186,13 +186,13 @@
   "tank":"Réservoir",
   "tankTypeUndetermined":"Indéterminé",
   "tankTypeUnderground":"Sous-terre",
-  "tankTypeAboveGround":"Hors-terre",
+  "tankTypeAboveground":"Hors-terre",
   "theme":"Thème",
-  "themeCreationTitle":"Nouveau thème",
+  "themeCreationTitle":"*Nouveau thème",
   "themeCreationMessage":"Entrez le nom du nouveau thème",
   "themeNameHolder":"Nom du thème",
   "themeSelection":"Séléction d'un thème",
-  "themeValidationMessage":"Le thème ne doit pas être vide.",
+  "themeValidationMessage":"*Le thème ne doit pas être vide.",
   "transversal":"Transversale",
   "type":"Type",
   "typeRequired":"*Le type est requis.",
