feat(#101) hot fix from code review

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,12 @@
 {
-  "anomalities":"Anomalities",
-  "anomalityDelete":"Delete anomality",
-  "anomalityDeleteQuestion":"Do you really want to delete this anomality ?",
-  "anomalityDetail":"Anomality details",
-  "anomalityLeaveMessage":"The anomality contains some validation errors and has not been saved. Do you still want to go to the building's anomalities list?",
+  "anomalies":"Anomalies",
+  "anomalyDelete":"Delete anomaly",
+  "anomalyDeleteQuestion":"Do you really want to delete this anomaly ?",
+  "anomalyDetail":"Anomaly details",
+  "anomalyLeaveMessage":"The anomaly contains some validation errors and has not been saved. Do you still want to go to the building's anomalies list?",
   "absence":"Absence",
   "add":"Add",
-  "addAnomalityButton":"Add an anomality...",
+  "addAnomalyButton":"Add an anomaly...",
   "addContactButton":"Add a contact...",
   "addFirePanelAlarmButton":"Add a alarm panel...",
   "addFireSprinklerButton":"Add a fire sprinkler...",
@@ -18,7 +18,7 @@
   "approximate":"Approximate",
   "backToBuildingList":"Return to building list",
   "building":"Building",
-  "buildingAnomalities":"Building's anomalities",
+  "buildingAnomalies":"Building's anomalies",
   "buildingContact": "Building's contacts",
   "buildingDetail":"Building's details",
   "buildingHazardousMaterial":"Building's hazardous material",
