--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,12 +1,12 @@
 {
-  "anomalities":"Anomalies",
-  "anomalityDelete":"Supprimer l'anomalie",
-  "anomalityDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette anomalie ?",
-  "anomalityDetail":"Détails de l'anomalie",
-  "anomalityLeaveMessage":"L'anomalie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des anomalies du bâtiment?",
+  "anomalies":"Anomalies",
+  "anomalyDelete":"Supprimer l'anomalie",
+  "anomalyDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette anomalie ?",
+  "anomalyDetail":"Détails de l'anomalie",
+  "anomalyLeaveMessage":"L'anomalie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des anomalies du bâtiment?",
   "absence":"Absence",
   "add":"Ajouter",
-  "addAnomalityButton":"Ajouter une anomalie...",
+  "addAnomalyButton":"Ajouter une anomalie...",
   "addContactButton":"Ajouter un contact...",
   "addFirePanelAlarmButton":"Ajouter un panneau d'alarme...",
   "addFireSprinklerButton":"Ajouter un gicleur...",
@@ -18,7 +18,7 @@
   "approximate":"Approximatif",
   "backToBuildingList":"Retourner à la liste des batîments",
   "building":"Batîment",
-  "buildingAnomalities":"Anomalies du btaîment",
+  "buildingAnomalies":"Anomalies du btaîment",
   "buildingContact": "Contacts du batîment",
   "buildingDetail":"Détails du batîmnet",
   "buildingHazardousMaterial":"Matières dangereuses du batîmnent",
