feat(#51) Add fire hydrant form and load methods

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,9 @@
   "absence":"Absence",
   "add":"Add",
   "addAnomalyButton":"Add an anomaly...",
+  "addButton":"Add...",
   "addContactButton":"Add a contact...",
+  "addFireHydrantButton":"Add a fire hydrant...",
   "addFirePanelAlarmButton":"Add a alarm panel...",
   "addFireSprinklerButton":"Add a fire sprinkler...",
   "addHazardousMaterialButton":"Add hazardous material...",
@@ -34,8 +36,10 @@
   "circle": "Cercle",
   "choose":"Choose...",
   "chooseFireStation":"Choose a fire station",
+  "civicNumber":"Civic #",
   "code":"Code",
   "collectorLocation":"Collector location",
+  "color":"Color",
   "comment":"Comment",
   "commentHolder":"Add your comment here",
   "complete":"Complete",
@@ -70,6 +74,24 @@
   "division":"Division",
   "done":"Done",
   "doorHangerLeft":"Door hanger left",
+  "enumAddressLocalisationType":{
+    "NextTo":"Next to",
+    "AtTheAddress":" At the address",
+    "BackWard":" Backward",
+    "AtEnd":" At the end",
+    "AtCorner":"At the corner",
+    "Above":"Above",
+    "Under":"Under",
+    "InFront":"In front",
+    "Near":"Near",
+    "VisibleFrom":"Visible from"
+  },
+  "enumFireHydrantLocationType":{
+    "Address":"Address",
+    "LaneAndIntersection":"Lane and intersection",
+    "Coordinates":"Geolocation",
+    "Text":"Approximative location"
+  },
   "editPicture": "Edit picture",
   "edition":"Edition",
   "extension":"Extension",
@@ -81,8 +103,10 @@
   "fireAlarmPanelLeaveMessage":"The alarm panel contains some validation errors and has not been saved. Do you still want to go to the building fire safety list?",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you really want to delete this fire hydrant ?",
+  "fireHydrantDetail":"Fire hydrant's details",
   "fireHydrantList":"Fire hydrant list",
   "fireHydrants":"Fire hydrants",
+  "fireHydrantLocationType":"Location type",
   "fireResistance":"Fire resistance",
   "fireSafety":"Fire safety",
   "fireSprinkler":"Fire sprinklers",
@@ -96,6 +120,7 @@
   "firstNameRequired":"*First name is required.",
   "floor":"Floor",
   "foundation":"Foundation",
+  "from":"From",
   "garage":"Garage",
   "gasInlet":"Gaz inlet",
   "generalInformation":"General information",
@@ -131,7 +156,8 @@
   "lastNameRequired":"*The last name is required.",
   "line": "Line",
   "loading":"Loading...",
-  "Localization":"Localization",
+  "localization":"Localization",
+  "location":"Location",
   "login":"LOG IN",
   "loginError":"Username or password invalid",
   "logout":"LOG OUT",
@@ -144,8 +170,10 @@
   "notes":"Notes",
   "number":"Number",
   "opening":"Opening",
+  "operator":"Operator",
   "otherInformation":"Other information",
   "otherPhone":"Other phone",
+  "outflow":"Outflow",
   "owner":"Owner",
   "ownerAbsent":"Owner absent",
   "ownerRefused":"Owner refused",
@@ -169,6 +197,7 @@
   "pnapNumber":"Number",
   "pnapNumberValidationMessage":"*The number must be a valid integer.",
   "position":"Position",
+  "pressure":"Pressure",
   "priority":"Priority",
   "priorityValidationMessage":"*You must enter a valid number.",
   "product":"Product",
@@ -208,6 +237,7 @@
   "themeNameHolder":"Name of the theme",
   "themeSelection":"Theme selection",
   "themeValidationMessage":"*The theme must not be empty.",
+  "to":"To",
   "transversal":"Transversal",
   "triangle": "Triangle",
   "type":"Type",
