--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,7 +7,9 @@
   "absence":"Absence",
   "add":"Ajouter",
   "addAnomalyButton":"Ajouter une anomalie...",
+  "addButton":"Ajouter...",
   "addContactButton":"Ajouter un contact...",
+  "addFireHydrantButton":"Ajouter une borne...",
   "addFirePanelAlarmButton":"Ajouter un panneau d'alarme...",
   "addFireSprinklerButton":"Ajouter un gicleur...",
   "addHazardousMaterialButton":"Ajouter une matière dangereuse...",
@@ -35,8 +37,10 @@
   "circle": "Cercle",
   "choose":"Choisir...",
   "chooseFireStation":"Choose a fire station",
+  "civicNumber":"# civique",
   "code":"Code",
   "collectorLocation":"Emplacement collecteur",
+  "color":"Couleur",
   "comment":"Commentaires",
   "commentHolder":"Entrez votre commentaire ici ",
   "complete":"Compléter",
@@ -73,6 +77,24 @@
   "doorHangerLeft":"Accroche-porte laissé",
   "editPicture": "Modifier l'image",
   "edition":"Édition",
+  "enumAddressLocalisationType":{
+    "NextTo":"À Côté",
+    "AtTheAddress":"À l'adresse",
+    "BackWard":"À l'arrière",
+    "AtEnd":"Au bout",
+    "AtCorner":"Au coin",
+    "Above":"Au dessus",
+    "Under":"En dessous",
+    "InFront":"En face",
+    "Near":"Près",
+    "VisibleFrom":"Visible du"
+  },
+  "enumFireHydrantLocationType":{
+    "Address":"Adresse",
+    "LaneAndIntersection":"Rue et intersection",
+    "Coordinates":"Géolocalization",
+    "Text":"Emplacement approximatif"
+  },
   "extension":"Extension",
   "finish":"Terminer",
   "fireAlarmPanel":"Panneaux d'alarme",
@@ -82,6 +104,7 @@
   "fireAlarmPanelLeaveMessage":"Le panneaux d'alarme contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des protections incendie du bâtiment?",
   "fireHydrantDelete":"Suppression de borne",
   "fireHydrantDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette borne ? ?",
+  "fireHydrantDetail":"Détails de la borne",
   "fireHydrantList":"Liste des bornes incendie",
   "fireHydrants":"Bornes incendie",
   "fireResistance":"Résistance au feu",
@@ -97,6 +120,7 @@
   "firstNameRequired":"*Le prénom est requis.",
   "floor":"Étage",
   "foundation":"Fondation",
+  "from":"De",
   "garage":"Garage",
   "gasInlet":"Entrée de gaz",
   "generalInformation":"Infos générales",
@@ -132,7 +156,8 @@
   "lastNameRequired":"Le nom est requis.",
   "line": "Ligne",
   "loading":"Chargement...",
-  "Localization":"Localisation",
+  "localization":"Localisation",
+  "location":"Emplacement",
   "login":"CONNEXION",
   "loginError":"Nom d'usager ou mot de passe incorrect.",
   "logout":"Quitter",
@@ -145,8 +170,10 @@
   "notes":"Notes",
   "number":"Numéro",
   "opening":"Ouveture",
+  "operator":"Opérateur",
   "otherInformation":"Autres informations",
   "otherPhone":"Autre téléphone",
+  "outflow":"Débit",
   "owner":"Propriétaire",
   "ownerAbsent":"Propriétaire absent",
   "ownerRefused":"Refus du propriétaire",
@@ -170,6 +197,7 @@
   "pnapNumber":"Nombre",
   "pnapNumberValidationMessage":"*Le nombre doit être une valeur entière valide.",
   "position":"Endroit",
+  "pressure":"Pression",
   "priority":"Priorité",
   "priorityValidationMessage":"*Vous devez entrer un nombre valide.",
   "product":"Produit",
@@ -208,6 +236,7 @@
   "themeNameHolder":"Nom du thème",
   "themeSelection":"Séléction d'un thème",
   "themeValidationMessage":"*Le thème ne doit pas être vide.",
+  "to":"À",
   "transversal":"Transversale",
   "triangle": "Triangle",
   "type":"Type",
