feat(#15) Modification on icons for carto in fire hydrant

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,6 +104,7 @@
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you really want to delete this fire hydrant ?",
   "fireHydrantDetail":"Fire hydrant's details",
+  "fireHydrantGeoPositionHolder":"Click on the map to locate...",
   "fireHydrantList":"Fire hydrant list",
   "fireHydrants":"Fire hydrants",
   "fireHydrantLocationType":"Location type",
